--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<ul>
 					<li class="active"><a>Tudor Tarniceru</a></li>
 					<li class="item"><a href="switch/index.html">Switch</a></li>
-					<li class="item"><a href="gomoku/index.html">Gomoku<sup style="font-size:10px;color:yellow;">New</sup></a></li>
+					<li class="item"><a href="gomoku/index.html">InRows<sup style="font-size:10px;color:yellow;">New</sup></a></li>
 				</ul>
 			</div>
 			<br><br>
@@ -25,8 +25,8 @@
 					<div class="play"></p><a href="switch/index.html">Play Now</a></p></div>
 				</div>
 				<div class="showcase" id="gomoku">
-					<div class="title"><p>Gomoku</p></div>
-					<div class="desc"><p><img src="data/gomokus.jpg" height="170" width="170"><br><br>Gomoku is a table game also known as five in a row in which two players place pieces on a 15x15 grid. The fisrt player who lines up 5 pieces on vertical, horizontal or diagonal wins.<br><br>Players place pieces in turns by clicking on a square from the grid, one piece per turn.</p></div>
+					<div class="title"><p>InRows</p></div>
+					<div class="desc"><p><img src="data/gomokus.jpg" height="170" width="170"><br><br>InRows is a game similar to Gomoku or Tic-Tac-Toe in which two players place pieces on a grid. The fisrt player who lines up a specified number of pieces on vertical, horizontal or diagonal wins.<br><br>Players place pieces in turns by clicking on a square from the grid, one piece per turn.</p></div>
 					<div class="status">Currently in alpha(&alpha;)</div>
 					<div class="players">Local Multiplayer</div>
 					<div class="play"></p><a href="gomoku/index.html">Play Now</a></p></div>
