--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				</div>
 				<div class="showcase" id="inrows">
 					<div class="title"><p>InRows</p></div>
-					<div class="desc"><p><img src="data/inrowss.jpg" height="170" width="170"><br><br>InRows is a game similar to Gomoku or Tic-Tac-Toe in which two players place pieces on a grid. The fisrt player who lines up a specified number of pieces on vertical, horizontal or diagonal wins.<br><br>Players place pieces in turns by clicking on a square from the grid, one piece per turn.</p></div>
+					<div class="desc"><p><img src="data/inrowss.jpg" height="170" width="170"><br><br>InRows is a game similar to Gomoku or Tic-Tac-Toe in which two players place pieces on a grid. The first player who lines up a specified number of pieces on vertical, horizontal or diagonal wins.<br><br>Players place pieces in turns by clicking on a square from the grid, one piece per turn.</p></div>
 					<div class="status">Currently in alpha(&alpha;)</div>
 					<div class="players">Local Multiplayer</div>
 					<div class="play"></p><a href="inrows/index.html">Play Now</a></p></div>
