My Personal Website

--- a/inrows/index.html
+++ b/inrows/index.html
@@ -25,11 +25,11 @@
 			var lst2 = 0;
 			var lst = [0, 0, 0, 0, 0];
 			var pln = [0, "Player One", "Player Two"];
-			var cls = [0, "#9c6514", "#159e9e", "#7c159e", "#159e15", "#9e9e15", "#9e1515"];
-			var clsav = [0, 1, 1, 0, 0, 0, 0];
+			var cls = [0, "#9c6514", "#159e9e", "#159e15", "#9e9e15", "#DC143C", "#7B68EE", "#DB7093", "#F4A460", "#2653a0"];
+			var clsav = [0, 1, 1, 0, 0, 0, 0, 0, 0, 0];
 			var cl1 = 1;
 			var cl2 = 2;
-			var clnr = 7;
+			var clnr = 10;
 			var plset = 0;
 			function initlst() {
 				lst1 = 0;
@@ -368,8 +368,8 @@
 		<center>
 			<div style="background-color:black">
 				<ul class="mm">
-					<li class="mm item"><a href="https://tudortarniceru.github.io">Tudor Tarniceru</a></li>
-					<li class="mm item"><a href="https://tudortarniceru.github.io/switch/index.html">Switch</a></li>
+					<li class="mm item"><a href="../index.html">Tudor Tarniceru</a></li>
+					<li class="mm item"><a href="../switch/index.html">Switch</a></li>
 					<li class="mm active"><a>InRows</a></li>
 				</ul>
 			</div>
@@ -434,7 +434,7 @@
 					<div style="height:15px;" id="custom_zone"><span id="customdim">Good Luck, Have Fun!</span><span id="customcol"></span><span id="custombt"></span><span id="customerr" style="color:#d24646;font-weight:bold;"></span></div>
 					<div id="credits" class="credits">
 						<h4>Created by Tudor Tarniceru</h4>
-						<h5>Alpha(&alpha;) Version</h5>
+						<h5>Beta(&beta;) Version</h5>
 					</div>
 				</div>
 			</div>
