--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 			<div>
 				<div class="showcase" id="switch">
 					<div class="title"><p>Switch</p></div>
-					<div class="desc"><p><img src="data/switchs.jpg" height="170" width="170"><br><br>Switch is a puzzle game in which you are given 2 grids and must make them look the same by changing their elements.<br><br>Clicking on a square from the left grid will change its and its neigbours color.</p></div>
+					<div class="desc"><p><img src="data/switchs.jpg" style="border:1px solid black; display:table-cell;" height="170" width="170"><br><br>Switch is a puzzle game in which you are given 2 grids and must make them look the same by changing their elements.<br><br>Clicking on a square from the left grid will change its and its neigbours color.</p></div>
 					<div class="status">Currently in beta(&beta;)</div>
 					<div class="players">Singleplayer</div>
 					<div class="play"></p><a href="switch/index.html">Play Now</a></p></div>
 				</div>
 				<div class="showcase" id="inrows">
 					<div class="title"><p>InRows</p></div>
-					<div class="desc"><p><img src="data/inrowss.jpg" height="170" width="170"><br><br>InRows is a game similar to Gomoku or Tic-Tac-Toe in which two players place pieces on a grid. The first player who lines up a specified number of pieces on vertical, horizontal or diagonal wins.<br><br>Players place pieces in turns by clicking on a square from the grid, one piece per turn.</p></div>
+					<div class="desc"><p><img src="data/inrowss.jpg" style="border:1px solid black; display:table-cell;" height="170" width="170"><br><br>InRows is a game similar to Gomoku or Tic-Tac-Toe in which two players place pieces on a grid. The first player who lines up a specified number of pieces on vertical, horizontal or diagonal wins.<br><br>Players place pieces in turns by clicking on a square from the grid, one piece per turn.</p></div>
 					<div class="status">Currently in beta(&beta;)</div>
 					<div class="players">Local Multiplayer</div>
 					<div class="play"></p><a href="inrows/index.html">Play Now</a></p></div>
